Fixed home page appearance on mobile devices
When testing my website across browsers and devices I found that my homepage looked crowded on mobile devices, so I added @media to change layout for mobile devices.

--- a/css/style.production.css
+++ b/css/style.production.css
@@ -1,6 +1,6 @@
 * {
   -webkit-box-sizing: border-box;
-  box-sizing: border-box;
+          box-sizing: border-box;
 }
 
 body {
@@ -20,29 +20,29 @@ body {
 
 .pageheaderitm {
   -webkit-box-flex: 0;
-  -ms-flex: 0 1 200px;
-  flex: 0 1 200px;
+      -ms-flex: 0 1 200px;
+          flex: 0 1 200px;
 }
 
 .pageheaderitm:last-child {
   -webkit-box-flex: 1;
-  -ms-flex-positive: 1;
-  flex-grow: 1;
+      -ms-flex-positive: 1;
+          flex-grow: 1;
   text-align: right;
 }
 
 .logo {
   -webkit-box-shadow: 4px 3px 19px rgba(0, 0, 0, 0.5);
-  box-shadow: 4px 3px 19px rgba(0, 0, 0, 0.5);
+          box-shadow: 4px 3px 19px rgba(0, 0, 0, 0.5);
   border-radius: 10%;
 }
 
 .logo:hover {
   -webkit-box-shadow: 4px 3px 19px rgba(0, 0, 0, 0.3);
-  box-shadow: 4px 3px 19px rgba(0, 0, 0, 0.3);
+          box-shadow: 4px 3px 19px rgba(0, 0, 0, 0.3);
   -webkit-transition-duration: 0.2s;
-  -o-transition-duration: 0.2s;
-  transition-duration: 0.2s;
+       -o-transition-duration: 0.2s;
+          transition-duration: 0.2s;
 }
 
 .navlist,
@@ -67,20 +67,32 @@ body {
   border-radius: 50%;
 }
 
+@media all and (max-width: 440px) {
+  .profilepic {
+    float: none;
+    position: relative;
+    left: 22px;
+  }
+
+  .profile {
+    text-align: center;
+  }
+}
+
 .profilepic {
   -webkit-box-shadow: 4px 3px 19px rgba(0, 0, 0, 0.5);
-  box-shadow: 4px 3px 19px rgba(0, 0, 0, 0.5);
+          box-shadow: 4px 3px 19px rgba(0, 0, 0, 0.5);
 }
 
 .profilepic1 {
   -webkit-box-shadow: 4px 3px 19px rgba(0, 0, 0, 0.5);
-  box-shadow: 4px 3px 19px rgba(0, 0, 0, 0.5);
+          box-shadow: 4px 3px 19px rgba(0, 0, 0, 0.5);
 }
 
 .profiletext {
   -webkit-box-flex: 1;
-  -ms-flex: 1 1 100px;
-  flex: 1 1 100px;
+      -ms-flex: 1 1 100px;
+          flex: 1 1 100px;
 }
 
 h1 {
@@ -140,8 +152,8 @@ a:focus {
   text-decoration: none;
   opacity: 0.9;
   -webkit-transition-duration: 0.2s;
-  -o-transition-duration: 0.2s;
-  transition-duration: 0.2s;
+       -o-transition-duration: 0.2s;
+          transition-duration: 0.2s;
 }
 
 .send {
@@ -161,8 +173,8 @@ a:focus {
   cursor: pointer;
   opacity: 0.8;
   -webkit-transition-duration: 0.2s;
-  -o-transition-duration: 0.2s;
-  transition-duration: 0.2s;
+       -o-transition-duration: 0.2s;
+          transition-duration: 0.2s;
 }
 
 input {
@@ -194,7 +206,7 @@ ul {
   background-color: #40bfa1;
   padding: 10px;
   -webkit-box-shadow: 4px 3px 19px rgba(0, 0, 0, 0.5);
-  box-shadow: 4px 3px 19px rgba(0, 0, 0, 0.5);
+          box-shadow: 4px 3px 19px rgba(0, 0, 0, 0.5);
   border-radius: 30px;
 }
 
@@ -322,7 +334,7 @@ button {
   padding: 10px;
   border-radius: 3px;
   -webkit-box-shadow: 4px 3px 19px rgba(0, 0, 0, 0.5);
-  box-shadow: 4px 3px 19px rgba(0, 0, 0, 0.5);
+          box-shadow: 4px 3px 19px rgba(0, 0, 0, 0.5);
 }
 
 .button {
@@ -337,7 +349,7 @@ button {
   padding: 10px;
   border-radius: 3px;
   -webkit-box-shadow: 4px 3px 19px rgba(0, 0, 0, 0.5);
-  box-shadow: 4px 3px 19px rgba(0, 0, 0, 0.5);
+          box-shadow: 4px 3px 19px rgba(0, 0, 0, 0.5);
 }
 
 button:hover,
@@ -345,10 +357,10 @@ button:focus,
 .button:hover,
 .button:focus {
   -webkit-box-shadow: 4px 3px 19px rgba(0, 0, 0, 0.3);
-  box-shadow: 4px 3px 19px rgba(0, 0, 0, 0.3);
+          box-shadow: 4px 3px 19px rgba(0, 0, 0, 0.3);
   -webkit-transition-duration: 0.2s;
-  -o-transition-duration: 0.2s;
-  transition-duration: 0.2s;
+       -o-transition-duration: 0.2s;
+          transition-duration: 0.2s;
 }
 
 .raincloud {
@@ -357,7 +369,7 @@ button:focus,
   margin-right: auto;
   margin-bottom: none;
   -webkit-animation: 1s cloud infinite alternate linear;
-  animation: 1s cloud infinite alternate linear;
+          animation: 1s cloud infinite alternate linear;
 }
 
 .seattle {
@@ -371,24 +383,24 @@ button:focus,
 @-webkit-keyframes cloud {
   from {
     -webkit-transform: translate(230px, 40px);
-    transform: translate(230px, 40px);
+            transform: translate(230px, 40px);
   }
 
   to {
     -webkit-transform: translate(230px, 40px);
-    transform: translate(230px, 40px);
+            transform: translate(230px, 40px);
   }
 }
 
 @keyframes cloud {
   from {
     -webkit-transform: translate(230px, 40px);
-    transform: translate(230px, 40px);
+            transform: translate(230px, 40px);
   }
 
   to {
     -webkit-transform: translate(230px, 40px);
-    transform: translate(230px, 40px);
+            transform: translate(230px, 40px);
   }
 }
 
@@ -438,12 +450,12 @@ button:focus,
   display: flex;
   -webkit-box-orient: vertical;
   -webkit-box-direction: normal;
-  -ms-flex-direction: column;
-  flex-direction: column;
+      -ms-flex-direction: column;
+          flex-direction: column;
   text-align: center;
   -webkit-box-flex: 1;
-  -ms-flex: 1 1 100px;
-  flex: 1 1 100px;
+      -ms-flex: 1 1 100px;
+          flex: 1 1 100px;
 }
 
 .aboutfooter {
@@ -472,7 +484,7 @@ button:focus,
 
 .rainb {
   -webkit-animation: 0.3s rainb infinite linear;
-  animation: 0.3s rainb infinite linear;
+          animation: 0.3s rainb infinite linear;
 }
 
 .email,
